update project name

--- a/src/activiti/deployPDF.html
+++ b/src/activiti/deployPDF.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>流程部署</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/activiti/deployPDF.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/activiti/deployPDF.js" ></script>
 	</head>
 	<body>
 		<hr />
