--- a/src/activiti/myApplication.html
+++ b/src/activiti/myApplication.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>我的申请</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/flow_chart.js" ></script>
-		<link rel="stylesheet" href="/OA_client/css/module/flow_chart.css" />
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/activiti/myApplication.js" ></script>		
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/flow_chart.js" ></script>
+		<link rel="stylesheet" href="/oa_client/css/module/flow_chart.css" />
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/activiti/myApplication.js" ></script>		
 		
 	</head>
 	<body>
@@ -38,7 +38,7 @@
 				<td>操作</td>
 			</tr>
 		</table>
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	
 		<div id="fade" class="black_overlay">  
 		</div>  
