--- a/src/forum/reply/reply.html
+++ b/src/forum/reply/reply.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>回复信息</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				var replyId = $("#replyId").val();
