--- a/src/system/user/user_privilege.html
+++ b/src/system/user/user_privilege.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>用户-权限</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				var userId = $("#userId").val();
