--- a/src/activiti/needMeApprove.html
+++ b/src/activiti/needMeApprove.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>我的任务</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/activiti/needMeApprove.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/activiti/needMeApprove.js" ></script>
 	</head>
 	<body>
 		<hr />
@@ -29,6 +29,6 @@
 				<td>操作</td>
 			</tr>
 		</table>
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
