--- a/src/forum/forums/forum.html
+++ b/src/forum/forums/forum.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>版块信息</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 			var forumId = $("#forumId").val();
@@ -18,7 +18,7 @@
 			//绑定 查看该版块最后回复 事件
 			$("#lastTopic").click(function(){
 				var topicId = $("#lastTopic").text();
-				$("#information").load("/OA_client/src/forum/topic/topic.html",function(){
+				$("#information").load("/oa_client/src/forum/topic/topic.html",function(){
 					$("#topicId").val(topicId);
 				});
 			});
@@ -95,7 +95,7 @@
 			
 			//绑定 按主题标题查看主题详细 事件
 			$(title).on("click",function(){
-			 	$("#information").load("/OA_client/src/forum/topic/topic.html",function(){
+			 	$("#information").load("/oa_client/src/forum/topic/topic.html",function(){
 			 		$("#topicId").val(topic.id);	 		
 			 	});	 	
 			 });
@@ -123,6 +123,6 @@
 		<div id="topics">
 			
 		</div>
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
