--- a/src/forum/forums/forum_list.html
+++ b/src/forum/forums/forum_list.html
@@ -3,19 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>论坛-版块</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 			loadAllForum(1,3);
 			
 			$("#add_forum").on("click",function(){		
-				$("#information").load("/OA_client/src/forum/forums/forum_add_or_update.html");
+				$("#information").load("/oa_client/src/forum/forums/forum_add_or_update.html");
 			});
 			
 			$("#add_topic").on("click",function(){		
-				$("#information").load("/OA_client/src/forum/topic/topic_add_or_update.html");
+				$("#information").load("/oa_client/src/forum/topic/topic_add_or_update.html");
 			})
 		});
 		
@@ -72,7 +72,7 @@
 			 
 			 //绑定 按版块名查看版块详细 事件
 			$(forumName).on("click",function(){
-			 	$("#information").load("/OA_client/src/forum/forums/forum.html",function(){
+			 	$("#information").load("/oa_client/src/forum/forums/forum.html",function(){
 			 		$("#forumId").val(forum.id);
 			 		$("#forumName").text(forum.forumName);
 			 		$("#description").text(forum.description);
@@ -92,7 +92,7 @@
 			 lastTopic = $("<p>最后主题：<a href='#'>"+forum.lastTopicName+"</a></p>");	 
 			 //绑定 查看该版块最后回复 事件
 			 $(lastTopic).on("click",function(){
-				 	$("#information").load("/OA_client/src/forum/topic/topic.html",function(){
+				 	$("#information").load("/oa_client/src/forum/topic/topic.html",function(){
 				 		$("#topicId").val(forum.lastTopic);
 				 		$("#forumName").text(forum.forumName);
 				 	});	 	
@@ -114,7 +114,7 @@
 			 var deletes = $("<button>删除 &nbsp;&nbsp;</button>");
 			 
 			 $(update).on("click",function(){
-			 	$("#information").load("/OA_client/src/forum/forums/forum_add_or_update.html",function(){
+			 	$("#information").load("/oa_client/src/forum/forums/forum_add_or_update.html",function(){
 			 		$("#forumId").val(forum.id);
 			 		$("#forumName").val(forum.forumName);
 			 		$("#description").val(forum.description);
@@ -151,7 +151,7 @@
 						success:function(result){
 							if(result.status)
 							{		
-								$("#information").load("/OA_client/src/forum/forums/forum_list.html");			
+								$("#information").load("/oa_client/src/forum/forums/forum_list.html");			
 							}else{
 								alert(result.msg);
 							}
@@ -175,6 +175,6 @@
 		<div id="fourms" >
 			
 		</div>
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
