--- a/src/forum/reply/reply_add_or_update.html
+++ b/src/forum/reply/reply_add_or_update.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>回复添加 或 修改</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.form.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.form.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 			var replyId = $("#replyId").val();
@@ -78,7 +78,7 @@
 						success:function(result){
 							if(result.status)
 							{		
-								$("#information").load("/OA_client/src/forum/reply/reply_list.html");		
+								$("#information").load("/oa_client/src/forum/reply/reply_list.html");		
 							}else{
 								alert(result.msg);
 							}
