--- a/src/forum/reply/reply_list.html
+++ b/src/forum/reply/reply_list.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>回复管理</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				loadAllReply(1,3);	
@@ -69,7 +69,7 @@
 				var title = $("<p>回复标题：<a href='#'>"+reply.title+"</a></p>");
 				 
 				 $(title).on("click",function(){
-				 	$("#information").load("/OA_client/src/forum/reply/reply.html",function(){
+				 	$("#information").load("/oa_client/src/forum/reply/reply.html",function(){
 				 		$("#replyId").val(reply.id);
 				 	});	 	
 				 });
@@ -95,7 +95,7 @@
 				 
 				 //绑定 修改回复   事件
 				 $(update).on("click",function(){
-				 	$("#information").load("/OA_client/src/forum/reply/reply_add_or_update.html",function(){
+				 	$("#information").load("/oa_client/src/forum/reply/reply_add_or_update.html",function(){
 				 		$("#replyId").val(reply.id);
 				 		$("#reply_title").val(reply.title);
 				 		$("#reply_content").val(reply.content);
@@ -117,6 +117,6 @@
 		<div id="replys">
 			
 		</div>
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
