--- a/src/forum/topic/topic.html
+++ b/src/forum/topic/topic.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>主题</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				var topicId = $("#topicId").val();
@@ -19,7 +19,7 @@
 				
 				$("#lastReply").click(function(){
 					var lastReply = $(this).text();
-					$("#information").load("/OA_client/src/forum/reply/reply.html",function(){
+					$("#information").load("/oa_client/src/forum/reply/reply.html",function(){
 				 		$("#replyId").val(lastReply); 		
 				 	});
 				});
@@ -27,7 +27,7 @@
 				$("#toReply").click(function(){
 					$("#replyPage").show();
 					var title = $("#title").text();
-				 	$("#replyPage").load("/OA_client/src/forum/reply/reply_add_or_update.html",function(){
+				 	$("#replyPage").load("/oa_client/src/forum/reply/reply_add_or_update.html",function(){
 				 		
 				 		$("#reply_topicId").val(topicId);	 		
 				 		$("#reply_title").val("@@"+title); 
@@ -180,6 +180,6 @@
 		<div id="replys">
 			
 		</div>
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
