--- a/src/system/part/part_list.html
+++ b/src/system/part/part_list.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>部门信息</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){	
 				loadParts(1,3);
 				$("#add_part").on("click",function(){
-					$("#information").load("/OA_client/src/system/part/part_add_or_update.html");
+					$("#information").load("/oa_client/src/system/part/part_add_or_update.html");
 				});
 			});
 			
@@ -82,7 +82,7 @@
 				var deletes = $("<a href='#'>delete</a>");
 				
 				$(update).on("click",function(){
-					$("#information").load("/OA_client/src/system/part/part_add_or_update.html",function(){
+					$("#information").load("/oa_client/src/system/part/part_add_or_update.html",function(){
 						
 						$("#part_id").val(part.id);
 						$("#partName").val(part.partName);
@@ -118,7 +118,7 @@
 							success:function(result){
 								if(result.status)
 								{		
-									$("#information").load("/OA_client/src/system/part/part_list.html");				
+									$("#information").load("/oa_client/src/system/part/part_list.html");				
 								}else{
 									alert(result.msg);
 								}
@@ -146,6 +146,6 @@
 			</tr>
 		</table>
 		<button id="add_part">添加</button><br />
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
