--- a/src/system/role/endow_privilege_to_role.html
+++ b/src/system/role/endow_privilege_to_role.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>角色权限管理</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/page.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/page.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript" >
 			$(document).ready(function(){
 				var roleId = $("#roleId").val();
@@ -53,7 +53,7 @@
 							success:function(result){
 								if(result.status)
 								{		
-									$("#information").load("/OA_client/src/system/role/role_list.html");		
+									$("#information").load("/oa_client/src/system/role/role_list.html");		
 								}else{
 									alert(result.msg);
 								}
