--- a/src/system/role/role_list.html
+++ b/src/system/role/role_list.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>角色信息</title>
-		<script type="text/javascript" src="/OA_client/js/module/jquery.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/common.js" ></script>
-		<script type="text/javascript" src="/OA_client/js/module/oa.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/jquery.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/common.js" ></script>
+		<script type="text/javascript" src="/oa_client/js/module/oa.js" ></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				loadRoles(1,3);
 				$("#add_role").on("click",function(){
-					$("#information").load("/OA_client/src/system/role/role_add_or_update.html");
+					$("#information").load("/oa_client/src/system/role/role_add_or_update.html");
 				});
 			});
 			
@@ -82,7 +82,7 @@
 				
 				//绑定角色 更新 事件
 				$(update).on("click",function(){
-					$("#information").load("/OA_client/src/system/role/role_add_or_update.html",function(){			
+					$("#information").load("/oa_client/src/system/role/role_add_or_update.html",function(){			
 						$("#role_id").val(role.id);
 						$("#roleName").val(role.roleName);
 						$("#description").val(role.description);
@@ -96,7 +96,7 @@
 				
 				//绑定授予该角色 权限 的事件
 				$(privileges).on("click",function(){
-					$("#information").load("/OA_client/src/system/role/endow_privilege_to_role.html",function(){
+					$("#information").load("/oa_client/src/system/role/endow_privilege_to_role.html",function(){
 						$("#roleName").text(role.roleName);
 						$("#roleId").val(role.id);
 					});
@@ -126,7 +126,7 @@
 							success:function(result){
 								if(result.status)
 								{		
-									$("#information").load("/OA_client/src/system/role/role_list.html");				
+									$("#information").load("/oa_client/src/system/role/role_list.html");				
 								}else{
 									alert(result.msg);
 								}
@@ -151,6 +151,6 @@
 			</tr>
 		</table>
 		<button id="add_role">添加</button><br />
-		<iframe id="pageIframeId" name="pageIframe" src="/OA_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
+		<iframe id="pageIframeId" name="pageIframe" src="/oa_client/src/common/page.html" scrolling="no" width="100%" height="40px" frameborder="0"></iframe>
 	</body>
 </html>
