--- a/src/system/user/login.html
+++ b/src/system/user/login.html
@@ -45,10 +45,19 @@
 		<h1>用户登陆</h1>
 		<hr />
 		
-		<form id="login_form" method="post">
+		<div>
+			<form id="login_form" method="post">
 			用户名：<input id="username" type="text" name="username" /><br />
 			密码：<input id="password" type="text" name="password" /><br />
 			<input id="login" type="submit" value="submit" />
-		</form>
+			</form>
+		</div>
+		<div>
+			<p>管理员  admin:1234</p>
+			<p>员工  张三:1234</p>
+			<p>部门经理  李四:1234</p>
+			<p>总经理  王五:1234</p>
+			<p>董事长  赵六:1234</p>
+		</div>
 	</body>
 </html>
